--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   </head>
   <body></body>
   <script>
-    let n = 5;
-    let string = "";
-
-    for (let i = 0; i < n; i++) {
-      for (let j = 0; j < n - i; j++) {
-        string += "*";
+ let printStar = (n) => {
+      let output = "";
+      for (let i = 0; i < n; i++) {
+        for (let j = 0; j < n - i; j++) {
+          output += "*";
+        }
+        output += "\n";
       }
-      string += "</br>";
-    }
-    document.write(string);
+      return output;
+    };
+    console.log(printStar(5));
   </script>
 </html>
